ajustes de enlace richard.pe

--- a/css/styles.css
+++ b/css/styles.css
@@ -3678,7 +3678,7 @@ textarea.form-control-lg {
 .enlace-richard:hover{
 
 
-  color: rgb(162,62,73);
+  color: rgb(41 49 78);
   cursor: pointer;
   text-decoration: none;
   font-weight: 600;
