--- a/css/styles.css
+++ b/css/styles.css
@@ -8172,7 +8172,8 @@ textarea.form-control-lg {
 
 .text-white-50 {
   --bs-text-opacity: 1;
-  color: rgba(255, 255, 255, 0.5) !important;
+  color: rgba(255, 255, 255, 0.85) !important;
+  font-weight: 600;
 }
 
 .text-reset {
